# pfun

./: pyproject.toml  renovate.json
.github/workflows/: ci.yml
src/pfun/: __init__.py  clock.py  effect.pyi  effect.pyx  functions.py  http.py  hypothesis_strategies.py  sql.py
